# Study

AutoEncoder/jupyter/: CropImage.ipynb  Fitting.ipynb  MakeDataofCsv.ipynb  defCVAE.ipynb  defCVAE.py  defCVAE_mnist.py  train-CVAE-selfdata.ipynb  train-CVAE.ipynb
AutoEncoder/jupyter/I_cvae/: Localization_of_CVAE.ipynb  dispLatent.ipynb  makeFieldImage.ipynb  make_dataset.ipynb  make_random_mnist.py  make_random_selfdata.py  net.py  train_mycvae.ipynb  train_myrcvae.ipynb  train_myrcvae.py  train_myvae.ipynb
AutoEncoder/jupyter/cvae/: defCVAE_selfdata.py  train-CVAE-selfdata.ipynb  train-CVAE.ipynb
AutoEncoder/jupyter/vae/: chainer-vae-self-train-data.ipynb
m1/: getJoyConBotton.py
m1/data/: log201805261417.csv  log201805261602.csv  log201805261608.csv  log201805261612.csv  log201805261614.csv  log201805261618.csv
m1/data/LOG_G/detect_ball_goal/: huriwake.sh
m1/data/LOG_G/fix_ball_robot/: stable
m1/data/LOG_G/gotya/: log201807292110.csv  log201807292207.csv  (+7 more)
m1/data/seki/: log201805261715.csv  log201805261718.csv
m1/jupyter/: ConvertInputDataPoleAxis2CenterOfGolAxis.ipynb  NeuralNetwork.ipynb  plotPredict.ipynb  tensorflow_test.ipynb
m1/src/: dispTrainData.py  getJoyConBotton.py  plotData.m  trainedAction.py
nn_dribble/data/LOG_G/: eeprom_list.txt  huriwake.sh
nn_dribble/data/test/: log201806251817.csv
nn_dribble/jupyter/: ConvertInputDataPoleAxis2CenterOfGolAxis.ipynb
nn_dribble/src/: getJoyConBotton.py
src/makeFileList/: CMakeLists.txt  makeFileList.cpp
src/makeTrainDataFromVrepImage/: CMakeLists.txt  makeTrainDataFromVrepImage.cpp
(+108 files in other folders)
